Trabajo en Clase

--- a/home.html
+++ b/home.html
@@ -14,24 +14,21 @@
         <li><a href="pages/html.html">HTML</a></li>
         <li><a href="pages/css.html">CSS</a></li>
         <li><a href="pages/javaScrip.html">javaScrip</a></li>
-        <h3>Unidad II</h3>
-        <li><a href="pages/bootstrap.html"></a>Bootstrap</li>
-        <li><a href="pages/jQuery.html">jQuery</a></li>
-        <li><a href="pages/ajax.html">Ajax</a></li>
         <h4>Unidad III</h4>
         <li><a href="pages/backend.html"></a>Backend</li>
         <li><a href="pages/apis.html">APIs</a></li>
         <li><a href="pages/postman.html">Postman</a></li>
     </ul>
     <ul>
-        <li><a href="pages/html.html">HTML</a></li>
-        <li><a href="pages/css.html">CSS</a></li>
-        <li><a href="pages/javaScrip.html">javaScrip</a></li>
         <h3>Unidad II</h3>
         <li><a href="pages/bootstrap.html"></a>Bootstrap</li>
         <li><a href="pages/jQuery.html">jQuery</a></li>
         <li><a href="pages/ajax.html">Ajax</a></li>
-        <h4>Unidad III</h4>        <li><a href="pages/backend.html"></a>Backend</li>
+        
+    </ul>
+    <ul>
+        <h4>Unidad III</h4>        
+        <li><a href="pages/backend.html"></a>Backend</li>
         <li><a href="pages/apis.html">APIs</a></li>
         <li><a href="pages/postman.html">Postman</a></li>
     </ul>
