--- a/pages/ajax.html
+++ b/pages/ajax.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <span><a href="../home.html">Inicio</a></span>
-        <p>Ajax</p>
+        <h1>Ajax</h1>
     </body>
 </html>
