--- a/pages/css.html
+++ b/pages/css.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <title>CSS</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <span><a href="../home.html">Inicio</a></span>
-        <p>css</p>
+        <h1>CSS</h1>
+        <p>CSS es el lenguaje que utilizamos para dar estilo a un documento HTML. CSS describe
+            cómo deben mostrarse los elementos HTML..</p>
+        <p>CSS (Cascade Style Sheet) = Hoja de Estilos en Cascada</p>
+            
     </body>
 </html>
