--- a/pages/html.html
+++ b/pages/html.html
@@ -19,5 +19,9 @@
         <h3>Simbolos Especiales</h3>
         <hr>
         <h4>Imagen</h4>
+        <p>Al ingresar imagenes se visualiza lo siguiente</p>
+        <p>Ejemplo de imagen en la carpeta <b>imagenes</b></p>
+        <img src="../images/_DSC8006.jpg" alt="imagenes" width="200" height="100">
+        
     </body>
 </html>
