--- a/pages/css.html
+++ b/pages/css.html
@@ -4,12 +4,23 @@
         <title>CSS</title>
         <link rel="stylesheet" href="../css/style.css">
     </head>
-    <body>
+    <body onload="logAccess('css')">
+        <div>
+            <ul>
+                <li><a href="../home.html"></a></li>
+                <li><a href="html.html">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="javaScrip.html">javaScrip</a></li>
+            </ul>
+        </div>
         <span><a href="../home.html">Inicio</a></span>
         <h1>CSS</h1>
         <p>CSS es el lenguaje que utilizamos para dar estilo a un documento HTML. CSS describe
             cómo deben mostrarse los elementos HTML..</p>
         <p>CSS (Cascade Style Sheet) = Hoja de Estilos en Cascada</p>
-            
+         <hr>
+         <footer>
+            <script src="../js/scrip-util.js"></script>
+        </footer>
     </body>
 </html>
