--- a/pages/javaScrip.html
+++ b/pages/javaScrip.html
@@ -2,9 +2,31 @@
 <html>
     <head>
         <title>Contenido Js</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
-    <body>
-        <span><a href="../home.html">Inicio</a></span>
-        <h1>javaScrip</h1>
+    <body onload="logAccess('js')">
+        <div>
+            <ul>
+                <li><a href="../home.html">Inicio</a></li>
+                <li><a href="html.html">HTML</a></li>
+                <li><a href="css.html">CSS</a></li>
+                <li><a href="#">javaScrip</a></li>
+            </ul>
+        </div>
+        <h1>Contenido JS</h1>
+        <hr>
+        <p>javaScrip es un lenguaje de programacion más popular del mundo.</p>
+        <img src="../images/_DSC8006.jpg" alt="JSS" width="200" height="100">
+    
+        <hr>
+        <h4 id="txtEjemplo">Ejemplo de javaScrip</h4>
+        <p>Al dar click en el siguiente bot&iacute;on </p>
+        <button id="btnClick" onclick="changeTitle()">Click! </button>    
+         <br>   
+        <footer>
+            <!--Vinculacion de archivo-->
+            <script src="../js/scrip-javaScrip.js"></script>
+            <script src="../js/scrip-util.js"></script>
+        </footer>
     </body>
 </html>
