--- a/pages/javaScrip.html
+++ b/pages/javaScrip.html
@@ -46,19 +46,19 @@
             <input class="btn" id="btnOperarInput" onclick="operar('Ha pulsado el boton Input')" type="button" value="Operar con Input">
         </div>
         <div>
-            <label for="txtResultadoSuma">Suma</label>
-            <!--readonly "solo lectura"-->
+            <label for="txtResultadoSuma">Suma: </label>
+            <!--readonly solo lectura-->
             <input type="text" name="txtResultadoSuma" id="txtResultadoSuma" readonly>
-            <label for="txtResultadoResta">Resta</label>
-            <input type="text" name="txtResultadoResta" id="txtResultadoResta" readonly>
+            <label for="txtResultadoResta">Resta: </label>
+            <input type="text" name="txtResultadoResta" id="txtResultadoResta" readonly>            
         </div>
         <div>
-            <label for="txtResultadoMulti">Multiplicacion</label>
+            <label for="txtResultadoMulti">Multiplicaci&oacute;n: </label>
             <input type="text" name="txtResultadoMulti" id="txtResultadoMulti" readonly>
-            <label for="txtResultadoDiv">Division</label>
-            <input type="text" name="txtResultadoDiv" id="txtResultadoDiv" readonly>
+            <label for="txtResultadoDivi">Divisi&oacute;n: </label>
+            <input type="text" name="txtResultadoDivi" id="txtResultadoDivi" readonly>
         </div>
-        <p id='txtDescripcin'></p>
+        <p id="txtDescripcion"></p>
 
         <footer>
             <!--Vinculacion de archivo-->
