--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
             <li><a href="pages/html.html">HTML</a></li>
             <li><a href="pages/css.html">CSS</a></li>
             <li><a href="pages/javaScrip.html">javaScrip</a></li>
+            <li><a href="pages/javaScrip.html">Dennis Caisa</a></li>
         </ul>
     </div>
     <h1 class="color-text">Programacion Web - NRC 5227</h1>
